# deepsel-cms

./: .dockerignore  .env.sample  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
backend/: .dockerignore  .env.sample  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  constants.py  db.py  entrypoint.sh  execute_cron.py  local.docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py
backend/apps/campaign/data/: __init__.py  cron.csv  implied_role.csv  role.csv
backend/apps/campaign/models/: email_campaign.py  email_campaign_row.py
backend/apps/campaign/routers/: email_campaign.py  utils.py
backend/apps/campaign/utils/: campaign_helpers.py  csv_parser.py
backend/apps/cms/: __init__.py
backend/apps/cms/data/: __init__.py  attachment.csv  blog_post.csv  blog_post_content.csv  cron.csv  email_template.csv  implied_role.csv  menu.csv  openrouter_model.csv  organization.csv  page.csv  page_content.csv  role.csv  template.csv  template_content.csv
backend/apps/cms/demo_data/: __init__.py  blog_post.csv  blog_post_content.csv  menu.csv  page.csv  page_content.csv  template.csv
backend/apps/cms/mixins/: blog_post.py  blog_post_content.py  menu.py  openrouter_model.py  organization.py  page.py  page_content.py
backend/apps/cms/models/: blog_post.py  blog_post_content.py  blog_post_content_revision.py  form.py  form_content.py  form_submission.py  menu.py  openrouter_model.py  organization.py  page.py  page_content.py  page_content_revision.py  template.py  template_content.py  theme_file.py  theme_file_content.py
backend/apps/cms/routers/: autocomplete.py  backup.py  blog_post.py  blog_post_content.py  chat.py  conflict_resolution.py  draft.py  form.py  form_content.py  form_submission.py  menu.py  openrouter.py  openrouter_model.py  page.py  page_content.py  revision.py  sitemap.py  template.py  template_content.py  theme.py  websocket.py
backend/apps/cms/schemas/: _nested.py  blog_post.py  blog_post_content.py  menu.py  openrouter_model.py  page.py  page_content.py  template.py  template_content.py
backend/apps/cms/templates/: default_template.html  forms_notification.html  forms_notification_to_admin.html  forms_notification_to_submitter.html
backend/apps/cms/tests/: conftest.py  test_default_theme.py  test_homepage_switch.py
backend/apps/cms/types/: __init__.py  blog.py  menu.py  public_settings.py  shared_datatypes.py
backend/apps/cms/utils/: __init__.py  ai_writing.py  build-jsx.mjs  build_jsx.py  build_status.py  client_process.py  domain_detection.py  edit_session_manager.py  form_content.py  form_submission.py  get_blog_list.py  get_blog_post.py  get_page_content.py  hash_utils.py  language_codes.py  page_content.py  process_menu_item.py  render_wysiwyg_content.py  search.py  setup_themes.py  shared_datatypes.py  state_utils.py  sync_utils.py  theme_imports.py  theme_language.py  theme_pages.py  translate_blog_content.py  translate_page_content.py  tsvector.py
backend/apps/core/data/: __init__.py  country.csv  email_template.csv  implied_role.csv  locale.csv  organization.csv  role.csv  user.csv  user_role.csv
backend/apps/core/mixins/: activity.py  orm.py
backend/apps/core/models/: activity.py  attachment.py  cron.py  email_template.py  implied_role.py  locale.py  organization.py  role.py  user.py  user_organization.py  user_role.py
backend/apps/core/routers/: activity.py  apps.py  attachment.py  auth.py  country.py  cron.py  currency.py  email_template.py  locale.py  organization.py  role.py  stock_image.py  user.py  util.py
backend/apps/core/schemas/: apps.py  attachment.py  auth.py  cron.py  email_template.py  locale.py  organization.py  role.py  stock_image.py  user.py  util.py
backend/apps/core/templates/: common_notify_template.html  password_reset.html
backend/apps/core/tests/: test_crud_user.py  test_email_doser.py  test_send_email.py
backend/apps/core/utils/: __init__.py  crud_router.py  email_doser.py  get_class_info.py  (+13 more)
backend/deepsel/data/: cron.csv  email_template.csv  organization.csv  role.csv
backend/deepsel/mixins/: activity.py  address.py  organization_metadata.py  orm.py
backend/deepsel/models/: activity.py  attachment.py  cron.py  email_out.py  email_template.py  implied_role.py  organization.py  role.py  user.py  user_organization.py  user_role.py
backend/deepsel/routers/: activity.py  apps.py  attachment.py  auth.py  cron.py  email_out.py  email_template.py  organization.py  role.py  stock_image.py  user.py  util.py
backend/deepsel/templates/: password_setup.html
backend/deepsel/tests/: conftest.py  test_crud_user.py
backend/deepsel/utils/: __init__.py  check_delete_cascade.py  crud_router.py  db_manager.py  email_doser.py  generate_crud_schemas.py  get_class_info.py  get_current_user.py  get_field_info.py  get_relationships.py  graphql_context.py  graphql_schema.py  install_apps.py  models_pool.py  query.py  secret_utils.py  send_email.py  server_events.py
backend/docs/: DataInsertion.md  SAML-Development-Notes.md  SAML-Testing-Guide.md  SendingEmail.md  ServerActions.md
mcp/: pyproject.toml
mcp/deepsel_cms_mcp/: client.py  server.py
mcp/deepsel_cms_mcp/tools/: activity.py  ai.py  attachments.py  blog_posts.py  locales.py  menus.py  pages.py  revisions.py  settings.py  templates.py  themes.py
(+666 files in other folders)
