[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepsel-cms"
version = "1.1.1"
description = "Deepsel CMS Backend - FastAPI application for content management"
readme = "README.md"
authors = [
    {name = "Deepsel Inc.", email = "info@deepsel.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["cms", "fastapi", "sqlalchemy", "deepsel"]
requires-python = ">=3.12"
dependencies = [
    "deepsel>=0.10.3",
    "pydantic>=2.7.0",
    "SQLAlchemy>=2.0.30",
    "fastapi>=0.115.0",
    "beautifulsoup4>=4.12.0",
    "websockets>=12.0",
    "httpx>=0.24.0",
    "PyYAML>=6.0.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "testcontainers[postgres]>=4.0.0",
    "psycopg[binary]>=3.1.0",
    "black>=26.1.0",
    "flake8>=7.2.0",
    "bandit>=1.9.3",
    "build>=0.10.0",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/DeepselSystems/deepsel-cms"
Repository = "https://github.com/DeepselSystems/deepsel-cms"
Issues = "https://github.com/DeepselSystems/deepsel-cms/issues"

[tool.setuptools]
package-dir = {deepsel_cms = "apps/cms"}
packages = [
    "deepsel_cms",
    "deepsel_cms.models",
    "deepsel_cms.routers",
    "deepsel_cms.schemas",
    "deepsel_cms.types",
    "deepsel_cms.utils",
    "deepsel_cms.data",
    "deepsel_cms.demo_data",
    "deepsel_cms.tests",
]

[tool.setuptools.package-data]
"deepsel_cms.data" = ["*.csv", "attachments/*"]
"deepsel_cms" = ["templates/*.html"]

[tool.black]
line-length = 88
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=apps --cov-report=term-missing"

[tool.flake8]
max-line-length = 88
exclude = [".git", "venv", ".venv", "build", "dist", "__pycache__"]
ignore = ["E501", "F401", "W292", "E261", "W503", "W504", "E302", "F541", "E303", "E712", "E711", "E203", "W291"]
