[project]
name = "deepsel-cms-mcp"
version = "0.1.0"
description = "MCP server for Deepsel CMS"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
deepsel-cms-mcp = "deepsel_cms_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
